sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
	var ecart=getNombreValeurs
	var tri = false
	var i =0
	do {
		if (ecart>1) {
			ecart = (ecart.toDouble / 1.3).toInt
		}
		if ((ecart=10) || (ecart==9)) {
			ecart=11
		}
		i=0
		tri=true
		while (i+ecart<getNombreValeurs) {
			if (plusPetit(i+ecart,i)) {
				echange(i+ecart,i)
				tri=false
			}
			i+=1
		}
	} while ((!tri) || ecart>1) 
}
